# opcodes

./: .travis.yml  LICENSE  README.md  Setup.hs  get-binutils.sh  opcodes.cabal
cbits/: shim.c  shim.h
src/Architecture/: Opcodes.hs
src/Architecture/Opcodes/: Internal.hs
